# isaaclab-mimicgen-xr-project

./: .gitignore  README.md
bridge/xr-teleop-bridge/: README.md  pyproject.toml
bridge/xr-teleop-bridge/docs/: ARCHITECTURE.zh.md  MESSAGE_SCHEMA.md  UBUNTU_A_SETUP.zh.md  UBUNTU_B_RECEIVER.zh.md
bridge/xr-teleop-bridge/examples/: sample_frame.json
bridge/xr-teleop-bridge/scripts/: check_lab_connection.py  run_mock_receiver.py  run_mock_sender.py  run_xrobotoolkit_sender.py
bridge/xr-teleop-bridge/src/xr_bridge/: __init__.py  healthcheck.py  mock_receiver.py  mock_xr_sender.py  schema.py  transport.py  xrobotoolkit_sender.py
commands/: square_pipeline.sh  train_eval_square.sh
docs/: CURRENT_PROGRESS.zh.md  DATA_PIPELINE.zh.md  IMPLEMENTATION_MAP.zh.md  MACHINE_ROLES.zh.md  PROJECT_OVERVIEW.zh.md  SQUARE_RESULTS.zh.md  UBUNTU_A_TO_B_HANDOFF.zh.md  XR_BRIDGE_PROTOCOL.md
prompts/: ubuntu_a_codex_prompt.zh.md  ubuntu_b_codex_prompt.zh.md
results/: square_eval_summary.json  square_eval_summary.zh.md
