[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xr-teleop-bridge"
version = "0.1.0"
description = "XR input bridge for Isaac Lab teleoperation"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0"
]

[tool.setuptools.packages.find]
where = ["src"]

